--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>LifestyleIncentive</title>
+  <title>Central1 Lifestyle Incentive Program 2016</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script> 
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+
+
+
 </body>
 </html>
